--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,21 @@
-node any
+pipeline {
+    agent any
+    stages {
+        stage('Compile') {
+            steps {
+                sh 'mvn compile'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+        }
+        stage('Package') {
+            steps {
+                sh 'mvn package'
+            }
+        }
+    }
+}
+
